REDBOX-262 #comment  Delete and inserted record at every processing instance, tomcat is installed from tar ball since JPackage is flaky.